--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="refresh" content="0; url=http://cellardoor2147.github.io/html/index.html" />
+	<meta http-equiv="refresh" content="0; url=http://cellardoor2147.github.io/html/presurvey.html" />
 	<title></title>
 </head>
 <body>
