--- a/html/index.html
+++ b/html/index.html
@@ -48,7 +48,7 @@
 	</audio>
 
 	<div id="canvas-container">
-		<canvas id="screen"></canvas>
+		<canvas id="screen" width="1135.2" height="600"></canvas>
 	</div>
 
 	<div class="container-fluid" id="questionBox" style="display: none;">
