updated scholarship section

--- a/highschool/highschool.html
+++ b/highschool/highschool.html
@@ -99,10 +99,16 @@
 				</a>
 			</li>
 
-			<li class="list-group-item"><a href="">Scholarships for Female Students</a></li>
-			<li class="list-group-item"><a href="">Scholarships for LGBTQ+ Students</a></li>
-			<li class="list-group-item"><a href="">Scholarships for Students w/ Disabilities</a></li>
-			<li class="list-group-item"><a href="">Scholarships for International Students</a></li>
+<!-- 			<li class="list-group-item"><a href="">Scholarships for Female Students</a></li> -->
+<!-- 			<li class="list-group-item"><a href="">Scholarships for LGBTQ+ Students</a></li> -->
+<!-- 			<li class="list-group-item"><a href="">Scholarships for Students w/ Disabilities</a></li> -->
+<!-- 			<li class="list-group-item"><a href="">Scholarships for International Students</a></li> -->
+
+			<li class="list-group-item">
+				<a href="scholarships/miscScholarships.html">
+					Miscellaneous Scholarships
+				</a>
+			</li>
 		</ul>
 
 		<h1 class="subTitle">Standardized Test Prep</h1>
