--- a/highschool/scholarships/scholarshipsForStudentsOfColor.html
+++ b/highschool/scholarships/scholarshipsForStudentsOfColor.html
@@ -175,27 +175,27 @@
 			</tr>
 		</table>
 
-		<h1 class="subTitle">Flinn Scholars</h1>
+		<h1 class="subTitle">Jackie Robinson Foundation Scholarship</h1>
 
 		<table class="table">
 			<tr>
 				<td class="table-active label" scope="row">Who Can Apply</td>
-		  		<td class="table-active label">Arizona high school seniors. Finalists generally have at least a 3.5 GPA, rank in the top 5% of their class, and have an ACT composite > 29 or SAT score > 1340.</td>
+		  		<td class="table-active label">High school seniors of color who demonstrate financial need and have at least a 1000 SAT or 21 ACT.</td>
 			</tr>
 
 			<tr>
 				<td class="table-active label" scope="row">When Do They Apply</td>
-		  		<td class="table-active label">Applications open in <b>mid-August</b> and close in <b>early-October.</b></td>
+		  		<td class="table-active label">Applications open on <b>November 1st</b> and close on <b>February 1st.</b></td>
 			</tr>
 
 			<tr>
 				<td class="table-active label" scope="row">How Do They Apply</td>
-		  		<td class="table-active label">All applicants submit an online application with a few essays, two letters of recommendation, a report from their high school conselor, a transcript, and standardized test scores.</td>
+		  		<td class="table-active label">All applicants submit an online application with a few essays, a letter of recommendation, standardized test scores, and a professional headshot.</td>
 			</tr>
 
 			<tr>
 				<td class="table-active label" scope="row">What Do They Get</td>
-		  		<td class="table-active label">The full cost of attendence at select Arizona universities, a study abroad summer seminar in China, a mentorship program, and admissions to their university's honor college.</td>
+		  		<td class="table-active label">Up to $30,000.</td>
 			</tr>
 
 			<tr>
@@ -205,32 +205,31 @@
 
 			<tr>
 				<td class="table-active label" scope="row">Website Link</td>
-		  		<td class="table-active label"><a href="https://www.flinn.org/">flinn.org</a></td>
+		  		<td class="table-active label"><a href="https://www.jackierobinson.org/apply/">jackierobinson.org/apply</a></td>
 			</tr>
 		</table>
 
-		<h1 class="subTitle">Posse Foundation Scholarship</h1>
+		<h1 class="subTitle">Ron Brown Scholarship</h1>
 
 		<table class="table">
 			<tr>
 				<td class="table-active label" scope="row">Who Can Apply</td>
-		  		<td class="table-active label">High school seniors living in Atlanta, the Bay Area, Boston, Chicago, Houston, Los Angeles, Miami, New Orleans, New York, or Washington, D.C who are nominated by their school or community-based organization.</td>
+		  		<td class="table-active label">High school seniors of African American descent who demonstrate significant financial need.</td>
 			</tr>
 
 			<tr>
 				<td class="table-active label" scope="row">When Do They Apply</td>
-		  		<td class="table-active label">Varies.</b></td>
+		  		<td class="table-active label"></b>For special consideration, applicants should send in their materials by <b>November 1st</b>. The final deadline is on <b>January 9th.</b></td>
 			</tr>
-
 
 			<tr>
 				<td class="table-active label" scope="row">How Do They Apply</td>
-		  		<td class="table-active label">All applicants submit an online application. Quad-finalists, semi-finalists, and finalists all have an interview and submit academic materials.</td>
+		  		<td class="table-active label">All applicants submit an online application with a transcript, letters of recommendation, and standardized test scores. Finalists have a series of in-person interviews.</td>
 			</tr>
 
 			<tr>
 				<td class="table-active label" scope="row">What Do They Get</td>
-		  		<td class="table-active label">The full cost of tuition to a Posse Foundation partner school, admission to pre-college workshops, and access to the Posse scholars network.</td>
+		  		<td class="table-active label">A stipend of $40,000 across four years and a trip DC at the expense of the Ron Brown Foundation.</td>
 			</tr>
 
 			<tr>
@@ -240,31 +239,31 @@
 
 			<tr>
 				<td class="table-active label" scope="row">Website Link</td>
-		  		<td class="table-active label"><a href="https://www.possefoundation.org/">possefoundation.org</a></td>
+		  		<td class="table-active label"><a href="https://www.ronbrown.org/section/apply/rbsp-application">ronbrown.org/section/apply</a></td>
 			</tr>
 		</table>
 
-		<h1 class="subTitle">Stamps Foundation Scholarship</h1>
+		<h1 class="subTitle">Tom Joyner Full Ride Scholarship</h1>
 
 		<table class="table">
 			<tr>
 				<td class="table-active label" scope="row">Who Can Apply</td>
-		  		<td class="table-active label">High school seniors with at least a 3.85 GPA and an SAT score > 1300 or ACT composite > 28.</td>
+		  		<td class="table-active label">High school seniors of African American descent with at least a 3.5 GPA and SAT of 1400 or ACT of 30.</td>
 			</tr>
 
 			<tr>
 				<td class="table-active label" scope="row">When Do They Apply</td>
-		  		<td class="table-active label">Varies.</td>
+		  		<td class="table-active label">Applications close on <b>January 19th</b>.</td>
 			</tr>
 
 			<tr>
 				<td class="table-active label" scope="row">How Do They Apply</td>
-		  		<td class="table-active label">All applicants submit an online application to their Stamps affiliate university.</td>
+		  		<td class="table-active label">All applicants submit an online application.</td>
 			</tr>
 
 			<tr>
 				<td class="table-active label" scope="row">What Do They Get</td>
-		  		<td class="table-active label">Up to $275,000.</td>
+		  		<td class="table-active label">Full tuition and stipends for up to 10 semesters to cover on-campus room and board and books at a historically black university.</td>
 			</tr>
 
 			<tr>
@@ -274,7 +273,7 @@
 
 			<tr>
 				<td class="table-active label" scope="row">Website Link</td>
-		  		<td class="table-active label"><a href="https://www.stampsfoundation.org/college-scholarship-program/">stampsfoundation.org</a></td>
+		  		<td class="table-active label"><a href="https://tomjoynerfoundation.org/">tomjoynerfoundation.org</a></td>
 			</tr>
 		</table>
 	</div>
