did ACT prep page

--- a/highschool/highschool.html
+++ b/highschool/highschool.html
@@ -119,7 +119,12 @@
 		</p>
 
 		<ul class="list-group list-group-flush">
-			<li class="list-group-item"><a href="">ACT Prep</a></li>
+			<li class="list-group-item">
+				<a href="standardizedTestPrep/act.html">
+					ACT Prep
+				</a>
+			</li>
+
 			<li class="list-group-item"><a href="">SAT Prep</a></li>
 			<li class="list-group-item"><a href="">PSAT Prep</a></li>
 			<li class="list-group-item"><a href="">TOEFL Prep</a></li>
