--- a/highschool/highschool.html
+++ b/highschool/highschool.html
@@ -125,7 +125,12 @@
 				</a>
 			</li>
 
-			<li class="list-group-item"><a href="">SAT Prep</a></li>
+			<li class="list-group-item">
+				<a href="standardizedTestPrep/sat.html">
+					SAT Prep
+				</a>
+			</li>
+
 			<li class="list-group-item"><a href="">PSAT Prep</a></li>
 			<li class="list-group-item"><a href="">TOEFL Prep</a></li>
 		</ul>
