added psat.html href to highschool.html

--- a/highschool/highschool.html
+++ b/highschool/highschool.html
@@ -131,7 +131,12 @@
 				</a>
 			</li>
 
-			<li class="list-group-item"><a href="">PSAT Prep</a></li>
+			<li class="list-group-item">
+				<a href="standardizedTestPrep/psat.html">
+					PSAT Prep
+				</a>
+			</li>
+
 			<li class="list-group-item"><a href="">TOEFL Prep</a></li>
 		</ul>
 
