finished toefl, college prep, and college admissions sections in highschool.html

--- a/highschool/highschool.html
+++ b/highschool/highschool.html
@@ -137,7 +137,11 @@
 				</a>
 			</li>
 
-			<li class="list-group-item"><a href="">TOEFL Prep</a></li>
+			<li class="list-group-item">
+				<a href="standardizedTestPrep/toefl.html">
+					TOEFL Prep
+				</a>
+			</li>
 		</ul>
 
 		<h1 class="subTitle">College Prep</h1>
@@ -148,8 +152,17 @@
 		</p>
 
 		<ul class="list-group list-group-flush">
-			<li class="list-group-item"><a href="">Choosing High School Classes</a></li>
-			<li class="list-group-item"><a href="">Choosing Extracurriculars</a></li>
+			<li class="list-group-item">
+				<a href="https://internationalcollegecounselors.com/9-tips-for-choosing-the-right-high-school-classes/">
+					Choosing High School Classes
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="https://blog.collegevine.com/how-to-choose-the-right-extracurriculars-for-you/">
+					Choosing Extracurriculars
+				</a>
+			</li>
 		</ul>
 
 		<h1 class="subTitle">College Admissions</h1>
@@ -160,13 +173,65 @@
 		</p>
 
 		<ul class="list-group list-group-flush">
-			<li class="list-group-item"><a href="">Colleges that Guarantee Substantial Need-Based Aid</a></li>
-			<li class="list-group-item"><a href="">Colleges that Guarantee Substantial Merit-Based Aid</a></li>
-			<li class="list-group-item"><a href="">Choosing a College</a></li>
-			<li class="list-group-item"><a href="">Writing a College Entrance Essay</a></li>
-			<li class="list-group-item"><a href="">Financial Aid VS Institutional Aid</a></li>
-			<li class="list-group-item"><a href="">Filling Out FAFSA</a></li>
-			<li class="list-group-item"><a href="">Filling Out CSS</a></li>
+			<li class="list-group-item">
+				<a href="https://blog.prepscholar.com/colleges-that-offer-complete-financial-aid">
+					Colleges that Guarantee Substantial Aid Based on Income
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="http://www.collegeplanningservices.org/uploads/5/8/0/4/58042801/complete_list_of_colleges_merit_scholarships_website.pdf">
+					Colleges that Guarantee Substantial Aid Based on General Merit
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="https://blog.prepscholar.com/guaranteed-scholarships-based-on-sat-act-scores">
+					Colleges that Guarantee Substantial Aid Based on ACT/SAT
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="http://thecollegematchmaker.com/52-colleges-offering-full-tuition-scholarships-national-merit-finalists/">
+					Colleges that Guarantee Substantial Aid Based on National Merit Status
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="http://hhscollegeandcareercenter.weebly.com/uploads/3/7/6/4/37648011/nhrpcompbined.pdf">
+					Colleges that Guarantee Substantial Aid Based on National Hispanic Status
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="https://blog.prepscholar.com/what-college-should-i-go-to-how-to-choose-a-college">
+					Choosing a College
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="https://admissions.tufts.edu/blogs/inside-admissions/post/the-only-four-college-essay-writing-tips-youll-ever-need/">
+					Writing a College Entrance Essay
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="https://www.collegeraptor.com/paying-for-college/articles/questions-answers/what-is-institutional-aid/">
+					Financial Aid VS Institutional Aid
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="https://www.nitrocollege.com/fafsa-guide">
+					Filling Out FAFSA
+				</a>
+			</li>
+
+			<li class="list-group-item">
+				<a href="https://www.nerdwallet.com/blog/loans/student-loans/css-profile/">
+					Filling Out CSS
+				</a>
+			</li>
 		</ul>
 	</div>
 </body>
