--- a/highschool/scholarships/miscScholarships.html
+++ b/highschool/scholarships/miscScholarships.html
@@ -98,7 +98,7 @@
 
 			<tr>
 				<td class="table-active label" scope="row">Successful Essay</td>
-		  		<td class="table-active label"><a href="https://www.aynrand.org/-/media/pdf/essay-contest-past-winners/2018_atlas_shrugged_winning_essay_9518.ashx">Link</a>.</td>
+		  		<td class="table-active label"><a href="https://www.aynrand.org/-/media/pdf/essay-contest-past-winners/2018_atlas_shrugged_winning_essay_9518.ashx">aynrand.org</a></td>
 			</tr>
 
 			<tr>
