--- a/index.html
+++ b/index.html
@@ -1,112 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CAF Project</title>
+	<title>Joshua Reed 95</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="custom/css/index.css">
-	<link rel="icon" href="assets/images/logo.png">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="icon" href="images/icon.png">
 </head>
 <body>
-	<header>
-		<nav class="navbar navbar-expand-md">
-		    <div class="navbar-collapse collapse justify-content-between align-items-center w-100">
-		        <ul class="navbar-nav mx-auto">
-		            <li class="nav-item">
-		                <a class="nav-link" href="highschool/highschool.html">High School</a> 
-		            </li>
+	<div class="container">
+		<div class="row icon" onclick="location.href='portfolio/portfolio.html'">
+			<div class="container">
+				<div class="row">
+					<img src="images/folder.png">
+				</div>
 
-		            <li class="nav-item disabled">
-		                <a class="nav-link" href="">|</a> 
-		            </li>
+				<div class="row text">
+					<p>Portfolio</p>
+				</div>
+			</div>
+		</div>
 
-		            <li class="nav-item">
-		                <a class="nav-link" href="college/college.html">College</a>
-		            </li>
+		<div class="row icon" onclick="location.href='myblog/myblog.html'">
+			<div class="container">
+				<div class="row">
+					<img src="images/folder.png">
+				</div>
 
-		            <li class="nav-item disabled">
-		                <a class="nav-link" href="">|</a> 
-		            </li>
+				<div class="row text">
+					<p>My Blog</p>
+				</div>
+			</div>			
+		</div>
 
-		            <li class="nav-item">
-		                <a class="nav-link" href="postcollege/postcollege.html">Post-College</a>
-		            </li>
+		<div class="row icon" onclick="location.href='aboutme/aboutme.html'">
+			<div class="container">
+				<div class="row text">
+					<img src="images/aboutme.png">
+				</div>
 
-		            <li class="nav-item disabled">
-		                <a class="nav-link" href="">|</a> 
-		            </li>
-
-		            <a href=""><img src="assets/images/logo3.png"></a>
-
-		            <li class="nav-item disabled">
-		                <a class="nav-link" href="">|</a> 
-		            </li>
-
-		            <li class="nav-item">
-		                <a class="nav-link" href="blog/blog.html">Blog and Opinions</a> 
-		            </li>
-
-		            <li class="nav-item disabled">
-		                <a class="nav-link" href="">|</a> 
-		            </li>		            
-
-		            <li class="nav-item">
-		                <a class="nav-link" href="aboutus/aboutus.html">About Us</a> 
-		            </li>
-
-		            <li class="nav-item disabled">
-		                <a class="nav-link" href="">|</a> 
-		            </li>
-
-		             <li class="nav-item">
-		                <a class="nav-link" href="contactus/contactus.html">Contact Us</a> 
-		            </li>
-		        </ul>
-		    </div>
-		</nav>
-	</header>
-
-	<div id="banner">
-		<h1>College Application Fairness Project</h1>
-		<p>Making the college application process fair and accessible</p>
+				<div class="row">
+					<p>About Me</p>
+				</div>
+			</div>
+		</div>
 	</div>
 
-	<div id="contentIndex">
-		<div class="row">
-			<div class="card cardIndex mx-auto text-center border-light rounded-0">
-				<div class="card-header">High School</div>
+	<img src="images/startbutton.png" id="startmenuwidget" onclick="">
 
-				<img class="card-img" src="assets/images/highschool.png" alt="Card Image Cap">
+	<img src="images/startmenu.png" id="startmenubackground">
+	
+	<p id="startmenutime"></p>
 
-				<div class="card-footer">
-					<p class="card-text">Scholarship directories, standardized test prep, college admissions advice, and more</p>
-					<a href="highschool/highschool.html" class="btn btn-dark">Learn More</a>
-				</div>
-			</div>
-
-			<div class="card cardIndex mx-auto text-center border-light rounded-0">
-				<div class="card-header">College</div>
-
-				<img class="card-img" src="assets/images/college.png" alt="Card Image Cap">
-
-				<div class="card-footer">
-					<p class="card-text">Internship directories, grad school test prep, grad school admissions advice, and more</p>
-					<a href="college/college.html" class="btn btn-dark">Learn More</a>
-				</div>
-			</div>
-
-			<div class="card cardIndex mx-auto text-center border-light rounded-0">
-				<div class="card-header">Post-College</div>
-
-				<img class="card-img" src="assets/images/postcollege.png" alt="Card Image Cap">
-
-				<div class="card-footer">
-					<p class="card-text">Post-graduate program directories, career advice, how you can help, and more</p>
-					<a href="postcollege/postcollege.html" class="btn btn-dark">Learn More</a>
-				</div>
-			</div>
-		</div>	
-	</div>
+	<script src="js/index.js" type="text/javascript"></script>
 </body>
 </html>
