changed file system and published Cowboy Saturday Night article

--- a/myblog/myblog.html
+++ b/myblog/myblog.html
@@ -19,30 +19,19 @@
 	<p id="filetext">My Blog</p>
 
 	<div class="items">
-		<div class="row">
-			<div class="col-md-4 icon">
-				<div class="container item" onclick="location.href='posts/3-11-2019/3-11-2019.html'">
-					<div class="row">
-						<img src="../images/blog.png">
-					</div>
+		<div class="item" onclick="location.href='posts/CowboySaturdayNight/CowboySaturdayNight.html'">
+			<img src="../images/blog.png">
+			<p>Cowboy_Saturday_Night.txt</p>
+		</div>
 
-					<div class="row text">
-						<p>3/11/2019</p>
-					</div>
-				</div>
-			</div>
+		<div class="item" onclick="location.href='posts/StartingACult/StartingACult.html'">
+			<img src="../images/blog.png">
+			<p>Starting_a_Cult.txt</p>
+		</div>
 
-			<div class="col-md-4 icon">
-				<div class="container item" onclick="location.href='posts/3-10-2019/3-10-2019.html'">
-					<div class="row">
-						<img src="../images/blog.png">
-					</div>
-
-					<div class="row text">
-						<p>3/10/2019</p>
-					</div>
-				</div>
-			</div>
+		<div class="item" onclick="location.href='posts/TheGirlInTheOveralls/TheGirlInTheOveralls.html'">
+			<img src="../images/blog.png">
+			<p>The_Girls_in_the_Overalls.txt</p>
 		</div>
 	</div>
 
