added about me section and all its articles

--- a/aboutme/aboutme.html
+++ b/aboutme/aboutme.html
@@ -6,7 +6,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="../css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/aboutme.css">
+	<link rel="stylesheet" type="text/css" href="../css/file.css">
 	<link rel="icon" href="../images/icon.png">
 </head>
 <body>
@@ -14,9 +14,36 @@
 
 	<img src="../images/filebuttons.png" class="filemanager fileheadblock" id="filebuttons" onclick="location.href='../index.html'">
 
-	<img src="../images/aboutme.png" class="filemanager fileheadblock" id="aboutmeicon">
+	<img src="../images/aboutme.png" class="filemanager fileheadblock" id="foldericon">
 
 	<p id="filetext">About Me</p>
+
+	<div class="items">
+		<div class="item" onclick="location.href='posts/Me/Me.html'">
+			<img src="../images/png.png">
+			<p>Me.png</p>
+		</div>
+
+		<div class="item" onclick="location.href='posts/FactsAboutMe/FactsAboutMe.html'">
+			<img src="../images/blog.png">
+			<p>Facts_About_Me.txt</p>
+		</div>
+
+		<div class="item" onclick="location.href='posts/ClassesIveTaken/ClassesIveTaken.html'">
+			<img src="../images/blog.png">
+			<p>Classes_Ive_Taken.txt</p>
+		</div>
+
+		<div class="item" onclick="location.href='posts/ExperienceIHave/ExperienceIHave.html'">
+			<img src="../images/blog.png">
+			<p>Experience_I_Have.txt</p>
+		</div>
+
+		<div class="item" onclick="location.href='posts/AwardsIveWon/AwardsIveWon.html'">
+			<img src="../images/blog.png">
+			<p>Awards_Ive_Won.txt</p>
+		</div>
+	</div>
 
 	<img src="../images/filebody.png" class="filemanager" id="filebody">
 
