Added projects to portfolio section

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -16,7 +16,29 @@
 
 	<img src="../images/folder.png" class="filemanager fileheadblock" id="foldericon">
 
-	<p id="filetext">Porfolio</p>
+	<p id="filetext">Portfolio</p>
+
+	<div class="items">
+		<div class="item" onclick="location.href='WebDevelopment/WebDevelopment.html'">
+			<img src="../images/folder.png">
+			<p>Web Development</p>
+		</div>
+
+		<div class="item" onclick="location.href='ProgrammingLanguages/ProgrammingLanguages.html'">
+			<img src="../images/folder.png">
+			<p>Programming Languages</p>
+		</div>
+
+		<div class="item" onclick="location.href='DataScience/DataScience.html'">
+			<img src="../images/folder.png">
+			<p>Data Science</p>
+		</div>
+
+		<div class="item" onclick="location.href='Games/Games.html'">
+			<img src="../images/folder.png">
+			<p>Games</p>
+		</div>
+	</div>
 
 	<img src="../images/filebody.png" class="filemanager" id="filebody">
 
