fixed issue with images not rendering

--- a/portfolio/Games/ColorGame/ColorGame.html
+++ b/portfolio/Games/ColorGame/ColorGame.html
@@ -23,7 +23,7 @@
 	<div id="post">
 		<h1>Color Game</h1>
 
-		<img src="images/ColorGame.jpg" class="widerpic">
+		<img src="images/ColorGame.JPG" class="widerpic">
 
 		<dl>
 			<dt>Date Completed</dt>
