--- a/portfolio/Games/FISAT/FISAT.html
+++ b/portfolio/Games/FISAT/FISAT.html
@@ -23,7 +23,7 @@
 	<div id="post">
 		<h1>FISAT</h1>
 
-		<img src="images/FISAT.jpg" class="widerpic">
+		<img src="images/FISAT.JPG" class="widerpic">
 
 		<dl>
 			<dt>Date Completed</dt>
