--- a/portfolio/Games/LOP/LOP.html
+++ b/portfolio/Games/LOP/LOP.html
@@ -23,7 +23,7 @@
 	<div id="post">
 		<h1>Labyrinth of Pyre</h1>
 
-		<img src="images/LOP.jpg" class="widerpic">
+		<img src="images/LOP.JPG" class="widerpic">
 
 		<dl>
 			<dt>Date Completed</dt>
