--- a/portfolio/WebDevelopment/ThisSite/ThisSite.html
+++ b/portfolio/WebDevelopment/ThisSite/ThisSite.html
@@ -23,7 +23,7 @@
 	<div id="post">
 		<h1>This Site</h1>
 
-		<img src="images/thissite.jpg" class="widerpic">
+		<img src="images/thissite.JPG" class="widerpic">
 
 		<dl>
 			<dt>Date Completed</dt>
