--- a/portfolio/DataScience/IncomeAndEducation/IncomeAndEducation.html
+++ b/portfolio/DataScience/IncomeAndEducation/IncomeAndEducation.html
@@ -23,7 +23,7 @@
 	<div id="post">
 		<h1>Income and Education</h1>
 
-		<img src="images/map.jpg" class="widerpic">
+		<img src="images/map.JPG" class="widerpic">
 
 		<dl>
 			<dt>Date Completed</dt>
