--- a/portfolio/DataScience/LongtermEffectsOfPoverty/LongtermEffectsOfPoverty.html
+++ b/portfolio/DataScience/LongtermEffectsOfPoverty/LongtermEffectsOfPoverty.html
@@ -23,7 +23,7 @@
 	<div id="post">
 		<h1>Long-term Effects of Poverty</h1>
 
-		<img src="images/data.jpg" class="widerpic">
+		<img src="images/data.JPG" class="widerpic">
 
 		<dl>
 			<dt>Date Completed</dt>
