--- a/portfolio/ProgrammingLanguages/AMPLParser/AMPLParser.html
+++ b/portfolio/ProgrammingLanguages/AMPLParser/AMPLParser.html
@@ -23,7 +23,7 @@
 	<div id="post">
 		<h1>AMPL Parser</h1>
 
-		<img src="images/amplparser.jpg" class="widerpic">
+		<img src="images/amplparser.JPG" class="widerpic">
 
 		<dl>
 			<dt>Date Completed</dt>
