--- a/portfolio/WebDevelopment/ToDo/ToDo.html
+++ b/portfolio/WebDevelopment/ToDo/ToDo.html
@@ -23,7 +23,7 @@
 	<div id="post">
 		<h1>To Do</h1>
 
-		<img src="images/todo.jpg" class="widerpic">
+		<img src="images/todo.JPG" class="widerpic">
 
 		<dl>
 			<dt>Date Completed</dt>
