added interpreter to portfolio

--- a/portfolio/ProgrammingLanguages/AMPLInterpreter/AMPLInterpreter.html
+++ b/portfolio/ProgrammingLanguages/AMPLInterpreter/AMPLInterpreter.html
@@ -12,57 +12,32 @@
 <body>
 	<img src="../../../images/filehead.png" class="filemanager fileheadblock" id="filehead">
 
-	<img src="../../../images/filebuttons.png" class="filemanager fileheadblock" id="filebuttons" onclick="location.href='../../aboutme.html'">
+	<img src="../../../images/filebuttons.png" class="filemanager fileheadblock" id="filebuttons" onclick="location.href='../ProgrammingLanguages.html'">
 
 	<img src="../../../images/blog.png" class="filemanager fileheadblock" id="blogicon">
 
-	<p id="filetext">Awards I've Won</p>
+	<p id="filetext">AMPL Interpreter</p>
 
 	<img src="../../../images/filebody.png" class="filemanager" id="filebody">
 
 	<div id="post">
-		<h1>Awards I've Won</h1>
+		<h1>AMPL Interpreter</h1>
+
+		<img src="images/amplinterpreter.JPG" class="widerpic">
 
 		<dl>
-			<dt>LEDA Career Fellow</dt>
-			<dd>
-				<ul>
-					<li><b>When: </b>2018</li>
-					<li><b>What I Won: </b>Recognition for academic success and leadership in the low-income student of color community. Given career coaching at Princeton University</li>
-				</ul>
-			</dd>
-
-			<dt>QuestBridge Scholar</dt>
-			<dd>
-				<ul>
-					<li><b>When: </b>2017</li>
-					<li><b>What I Won: </b>A full-ride scholarship to Wesleyan University</li>
-				</ul>
-			</dd>
-
-			<dt>OSSAA State Champion</dt>
-			<dd>
-				<ul>
-					<li><b>When: </b>2017</li>
-					<li><b>What I Won: </b>The state champion title in Domestic Extemporaneous Speaking</li>
-				</ul>
-			</dd>
-
-			<dt>National Hispanic Scholar</dt>
-			<dd>
-				<ul>
-					<li><b>When: </b>2017</li>
-					<li><b>What I Won: </b>Recognition for scoring among the top 0.5% of Hispanic PSAT test-takers nationwide</li>
-				</ul>
-			</dd>
-
-			<dt>One-Act Play All State Cast</dt>
-			<dd>
-				<ul>
-					<li><b>When: </b>2016 & 2017</li>
-					<li><b>What I Won: </b>Chosen among thousands of young actors as one of the top ten best in the state</li>
-				</ul>
-			</dd>
+			<dt>Date Completed</dt>
+			<dd>3/30/2019</dd>
+			<dt>What It Is</dt>
+			<dd>A interpreter for the AMPL object language. It goes through an abstract syntax tree written in the metalanguage, SML (NJ), and evaluates expressions. Programs are evaluated by storing declarations in an environment and printing expressions</dd>
+			<dt>Technologies Used</dt>
+			<dd>SML (NJ), AMPL Parser, ML Lex, and BASH</dd>
+			<dt>Plans for Future Improvement</dt>
+			<dd>None</dd>
+			<dt>Working Demo</dt>
+			<dd>NA</dd>
+			<dt>Link to Code</dt>
+			<dd>Email me at jtreed@wesleyan.edu to get a copy of the files. This project uses code from a classroom assignment, so I can't post anything publicly that might leak solutions to future students</dd>
 		</dl>
 	</div>
 
