--- a/portfolio/ProgrammingLanguages/ProgrammingLanguages.html
+++ b/portfolio/ProgrammingLanguages/ProgrammingLanguages.html
@@ -24,15 +24,15 @@
 			<p>AMPL_Parser.txt</p>
 		</div>
 
-<!-- 		<div class="item" onclick="location.href='AMPLInterpreter/AMPLInterpreter.html'">
+	<div class="item" onclick="location.href='AMPLInterpreter/AMPLInterpreter.html'">
 			<img src="../../images/blog.png">
 			<p>AMPL_Interpreter.txt</p>
 		</div>
 
-		<div class="item" onclick="location.href='AMPLCompiler/AMPLCompiler.html'">
+		<div class="item" onclick="location.href='AMPLTypeEngine/AMPLTypeEngine.html'">
 			<img src="../../images/blog.png">
-			<p>AMPL_Compiler.txt</p>
-		</div> -->
+			<p>AMPL_Type_Engine.txt</p>
+		</div>
 	</div>
 
 	<img src="../../images/filebody.png" class="filemanager" id="filebody">
