added Trains, Planes, and White Buses article to my blog

--- a/myblog/myblog.html
+++ b/myblog/myblog.html
@@ -19,6 +19,11 @@
 	<p id="filetext">My Blog</p>
 
 	<div class="items">
+		<div class="item" onclick="location.href='posts/TrainsPlanesAndWhiteBuses/TrainsPlanesAndWhiteBuses.html'">
+			<img src="../images/blog.png">
+			<p>Trains_Planes_And_White_Buses.txt</p>
+		</div>
+
 		<div class="item" onclick="location.href='posts/CowboySaturdayNight/CowboySaturdayNight.html'">
 			<img src="../images/blog.png">
 			<p>Cowboy_Saturday_Night.txt</p>
