added "quitting my first job" article

--- a/myblog/myblog.html
+++ b/myblog/myblog.html
@@ -19,6 +19,11 @@
 	<p id="filetext">My Blog</p>
 
 	<div class="items">
+		<div class="item" onclick="location.href='posts/QuittingMyFirstJob/QuittingMyFirstJob.html'">
+			<img src="../images/blog.png">
+			<p>Quitting_My_First_Job.txt</p>
+		</div>
+
 		<div class="item" onclick="location.href='posts/TrainsPlanesAndWhiteBuses/TrainsPlanesAndWhiteBuses.html'">
 			<img src="../images/blog.png">
 			<p>Trains_Planes_And_White_Buses.txt</p>
