changed title of a post

--- a/myblog/myblog.html
+++ b/myblog/myblog.html
@@ -19,9 +19,9 @@
 	<p id="filetext">My Blog</p>
 
 	<div class="items">
-		<div class="item" onclick="location.href='posts/QuittingMyFirstJob/QuittingMyFirstJob.html'">
+		<div class="item" onclick="location.href='posts/DitchingTheDollar/DitchingTheDollar.html'">
 			<img src="../images/blog.png">
-			<p>Quitting_My_First_Job.txt</p>
+			<p>Ditching_the_Dollar.txt</p>
 		</div>
 
 		<div class="item" onclick="location.href='posts/TrainsPlanesAndWhiteBuses/TrainsPlanesAndWhiteBuses.html'">
