changed "links" part of project pages

--- a/portfolio/DataScience/IncomeAndEducation/IncomeAndEducation.html
+++ b/portfolio/DataScience/IncomeAndEducation/IncomeAndEducation.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138877028-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-138877028-1');
+	</script>
 	<title>Joshua Reed 95</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -39,9 +48,8 @@
 					<li>At the time of writing this, I'm learning R, so I may go back and play with the dataset again with that</li>
 				</ul>
 			</dd>
-			<dt>Link to Data Viz</dt>
+			<dt>Links</dt>
 			<dd><a href="https://public.tableau.com/profile/joshua.reed4110#!/vizhome/DifferencesinEducaitonBetweenOklahomaandTexas/DifferencesinEducationBetweenOklahomaandTexas?publish=yes" target="_blank">Tableau Graphs</a></dd>
-			<dt>Link to Article</dt>
 			<dd><a href="https://drive.google.com/file/d/120fG_QLL_8pvWntk9PHeALb6o0UT-iz8/view?usp=sharing" target="_blank">Google Doc</a></dd>
 		</dl>
 	</div>
