--- a/portfolio/DataScience/LongtermEffectsOfPoverty/LongtermEffectsOfPoverty.html
+++ b/portfolio/DataScience/LongtermEffectsOfPoverty/LongtermEffectsOfPoverty.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138877028-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-138877028-1');
+	</script>
 	<title>Joshua Reed 95</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -39,9 +48,8 @@
 					<li>Maybe play with the data a bit more to try to discover generational differences</li>
 				</ul>
 			</dd>
-			<dt>Link to Data</dt>
+			<dt>Links</dt>
 			<dd><a href="https://drive.google.com/file/d/1o7RuyT7vlhDv3HpdD6IS3qWicywJiWnU/view?usp=sharing" target="_blank">Google Spreadsheet</a></dd>
-			<dt>Link to Article</dt>
 			<dd><a href="https://drive.google.com/file/d/16toqsmnyhHNTDAk-1HUX3LUqhL0Vo4QO/view?usp=sharing" target="_blank">Google Doc</a></dd>
 		</dl>
 	</div>
