--- a/portfolio/Networks/ConfigurationModelDegreeDistribution/ConfigurationModelDegreeDistribution.html
+++ b/portfolio/Networks/ConfigurationModelDegreeDistribution/ConfigurationModelDegreeDistribution.html
@@ -21,52 +21,30 @@
 <body>
 	<img src="../../../images/filehead.png" class="filemanager fileheadblock" id="filehead">
 
-	<img src="../../../images/filebuttons.png" class="filemanager fileheadblock" id="filebuttons" onclick="location.href='../../aboutme.html'">
+	<img src="../../../images/filebuttons.png" class="filemanager fileheadblock" id="filebuttons" onclick="location.href='../Networks.html'">
 
 	<img src="../../../images/blog.png" class="filemanager fileheadblock" id="blogicon">
 
-	<p id="filetext">Facts About Me</p>
+	<p id="filetext">Configuration Model Degree Distribution</p>
 
 	<img src="../../../images/filebody.png" class="filemanager" id="filebody">
 
 	<div id="post">
-		<h1>Facts About Me</h1>
+		<h1>Configuration Model Degree Distribution</h1>
 
-		<img src="images/meandkatie.jpg" class="widepic">
+		<img src="images/code.JPG" class="widerpic">
 
 		<dl>
-			<dt>Name</dt>
-			<dd>Joshua Taylor Reed</dd>
-			<dt>Hometown</dt>
-			<dd>Corpus Christi, TX</dd>
-			<dt>Alignment</dt>
-			<dd>Chaotic Neutral</dd>
-			<dt>Alma Mater</dt>
-			<dd>Wesleyan University (still attending)</dd>
-			<dt>Major</dt>
-			<dd>Computer Science</dd>
-			<dt>Minor</dt>
-			<dd>Writing and Civic Engagement</dd>
-			<dt>Favorite Restaurant</dt>
-			<dd>Whataburger</dd>
-			<dt>Favorite Movie</dt>
-			<dd>Good Fellas <i>or</i> The Thing (1982)</dd>
-			<dt>Favorite TV Show</dt>
-			<dd>Avatar: The Last Airbender</dd>
-			<dt>Favorite Video Game</dt>
-			<dd>Doom (1993)</dd>
-			<dt>Favorite Band</dt>
-			<dd>Nine Inch Nails</dd>
-			<dt>Favorite Song</dt>
-			<dd>Reptile</dd>
-			<dt>Favorite Book</dt>
-			<dd>Death Be Not Proud</dd>
-			<dt>Favorite Short Story</dt>
-			<dd>Library of Babel</dd>
-			<dt>Favorite Tabletop Roleplaying Game</dt>
-			<dd>GURPS</dd>
-			<dt>Favorite Ninja Turtle</dt>
-			<dd>Donatello</dd>
+			<dt>Date Completed</dt>
+			<dd>4/10/2019</dd>
+			<dt>What It Is</dt>
+			<dd>A framework for instantiating random networks using the configuration model and performing various tests pertaining to degree distribution. Heavily employs the price model and other variants for comparison</dd>
+			<dt>Technologies Used</dt>
+			<dd>Python, Networkx, Numpy, Matplotlib</dd>
+			<dt>Plans for Future Improvement</dt>
+			<dd>None</dd>
+			<dt>Links</dt>
+			<dd><a href="https://github.com/cellardoor2147/Networks-With-Python/blob/master/Networks-With-Python/hw4_skel.py" target="_blank">Github Repository</a></dd>
 		</dl>
 	</div>
 
