--- a/portfolio/Networks/Modularity/Modularity.html
+++ b/portfolio/Networks/Modularity/Modularity.html
@@ -21,52 +21,32 @@
 <body>
 	<img src="../../../images/filehead.png" class="filemanager fileheadblock" id="filehead">
 
-	<img src="../../../images/filebuttons.png" class="filemanager fileheadblock" id="filebuttons" onclick="location.href='../../aboutme.html'">
+	<img src="../../../images/filebuttons.png" class="filemanager fileheadblock" id="filebuttons" onclick="location.href='../ProgrammingLanguages.html'">
 
 	<img src="../../../images/blog.png" class="filemanager fileheadblock" id="blogicon">
 
-	<p id="filetext">Facts About Me</p>
+	<p id="filetext">AMPL Parser</p>
 
 	<img src="../../../images/filebody.png" class="filemanager" id="filebody">
 
 	<div id="post">
-		<h1>Facts About Me</h1>
+		<h1>AMPL Parser</h1>
 
-		<img src="images/meandkatie.jpg" class="widepic">
+		<img src="images/amplparser.JPG" class="widerpic">
 
 		<dl>
-			<dt>Name</dt>
-			<dd>Joshua Taylor Reed</dd>
-			<dt>Hometown</dt>
-			<dd>Corpus Christi, TX</dd>
-			<dt>Alignment</dt>
-			<dd>Chaotic Neutral</dd>
-			<dt>Alma Mater</dt>
-			<dd>Wesleyan University (still attending)</dd>
-			<dt>Major</dt>
-			<dd>Computer Science</dd>
-			<dt>Minor</dt>
-			<dd>Writing and Civic Engagement</dd>
-			<dt>Favorite Restaurant</dt>
-			<dd>Whataburger</dd>
-			<dt>Favorite Movie</dt>
-			<dd>Good Fellas <i>or</i> The Thing (1982)</dd>
-			<dt>Favorite TV Show</dt>
-			<dd>Avatar: The Last Airbender</dd>
-			<dt>Favorite Video Game</dt>
-			<dd>Doom (1993)</dd>
-			<dt>Favorite Band</dt>
-			<dd>Nine Inch Nails</dd>
-			<dt>Favorite Song</dt>
-			<dd>Reptile</dd>
-			<dt>Favorite Book</dt>
-			<dd>Death Be Not Proud</dd>
-			<dt>Favorite Short Story</dt>
-			<dd>Library of Babel</dd>
-			<dt>Favorite Tabletop Roleplaying Game</dt>
-			<dd>GURPS</dd>
-			<dt>Favorite Ninja Turtle</dt>
-			<dd>Donatello</dd>
+			<dt>Date Completed</dt>
+			<dd>2/28/2019</dd>
+			<dt>What It Is</dt>
+			<dd>A parser for the AMPL object language. It goes through a file in the metalanguage, SML (NJ), and determines whether the source file contains legal expressions and declarations. This doesn't include type checking (that's the type engine's job)</dd>
+			<dt>Technologies Used</dt>
+			<dd>SML (NJ), ML Lex, and BASH</dd>
+			<dt>Plans for Future Improvement</dt>
+			<dd>None</dd>
+			<dt>Working Demo</dt>
+			<dd>NA</dd>
+			<dt>Link to Code</dt>
+			<dd>Email me at jtreed@wesleyan.edu to get a copy of the files. This project uses code from a classroom assignment, so I can't post anything publicly that might leak solutions to future students</dd>
 		</dl>
 	</div>
 
