--- a/portfolio/Networks/Networks.html
+++ b/portfolio/Networks/Networks.html
@@ -25,22 +25,32 @@
 
 	<img src="../../images/folder.png" class="filemanager fileheadblock" id="foldericon">
 
-	<p id="filetext">Programming Languages</p>
+	<p id="filetext">Networks</p>
 
 	<div class="items">
-		<div class="item" onclick="location.href='AMPLParser/AMPLParser.html'">
+		<div class="item" onclick="location.href='CentralityMeasures/CentralityMeasures.html'">
 			<img src="../../images/blog.png">
-			<p>AMPL_Parser.txt</p>
+			<p>Centrality_Measures.txt</p>
 		</div>
 
-	<div class="item" onclick="location.href='AMPLInterpreter/AMPLInterpreter.html'">
+		<div class="item" onclick="location.href='ConfigurationModelDegreeDistribution/ConfigurationModelDegreeDistribution.html'">
 			<img src="../../images/blog.png">
-			<p>AMPL_Interpreter.txt</p>
+			<p>Configuration_Model_Degree_Distribution.txt</p>
 		</div>
 
-		<div class="item" onclick="location.href='AMPLTypeEngine/AMPLTypeEngine.html'">
+		<div class="item" onclick="location.href='FriendshipParadox/FriendshipParadox.html'">
 			<img src="../../images/blog.png">
-			<p>AMPL_Type_Engine.txt</p>
+			<p>Friendship_Paradox.txt</p>
+		</div>
+		<!--
+		<div class="item" onclick="location.href='Modularity/Modularity.html'">
+			<img src="../../images/blog.png">
+			<p>Modularity.txt</p>
+		</div>
+		-->
+		<div class="item" onclick="location.href='ProbabilisticNetworkGeneration/ProbabilisticNetworkGeneration.html'">
+			<img src="../../images/blog.png">
+			<p>Probabilistic_Network_Generation.txt</p>
 		</div>
 	</div>
 
