--- a/portfolio/ProgrammingLanguages/AMPLInterpreter/AMPLInterpreter.html
+++ b/portfolio/ProgrammingLanguages/AMPLInterpreter/AMPLInterpreter.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138877028-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-138877028-1');
+	</script>
 	<title>Joshua Reed 95</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -34,9 +43,7 @@
 			<dd>SML (NJ), AMPL Parser, ML Lex, and BASH</dd>
 			<dt>Plans for Future Improvement</dt>
 			<dd>None</dd>
-			<dt>Working Demo</dt>
-			<dd>NA</dd>
-			<dt>Link to Code</dt>
+			<dt>Links</dt>
 			<dd>Email me at jtreed@wesleyan.edu to get a copy of the files. This project uses code from a classroom assignment, so I can't post anything publicly that might leak solutions to future students</dd>
 		</dl>
 	</div>
