--- a/portfolio/WebDevelopment/CAFProject/CAFProject.html
+++ b/portfolio/WebDevelopment/CAFProject/CAFProject.html
@@ -41,9 +41,8 @@
 					<li>Add a quiz on the home page to help users determine which content is the best fit for them (possibly using AngularJS?)</li>
 				</ul>
 			</dd>
-			<dt>Working Demo</dt>
+			<dt>Links</dt>
 			<dd><a href="http://www.cafproject.com" target="_blank">cafproject.com</a></dd>
-			<dt>Link to Code</dt>
 			<dd><a href="https://github.com/cafproject/cafproject.github.io" target="_blank">Github repository</a></dd>
 		</dl>
 	</div>
