--- a/portfolio/WebDevelopment/ThisSite/ThisSite.html
+++ b/portfolio/WebDevelopment/ThisSite/ThisSite.html
@@ -41,9 +41,7 @@
 					<li>Start a "dev log" miniseries for new projects, possibly include in the portfolio section of the site</li>
 				</ul>
 			</dd>
-			<dt>Working Demo</dt>
-			<dd>You're looking at it</dd>
-			<dt>Link to Code</dt>
+			<dt>Links</dt>
 			<dd><a href="https://github.com/cellardoor2147/cellardoor2147.github.io" target="_blank">Github repository</a></dd>
 		</dl>
 	</div>
