--- a/portfolio/WebDevelopment/ToDo/ToDo.html
+++ b/portfolio/WebDevelopment/ToDo/ToDo.html
@@ -34,9 +34,8 @@
 			<dd>HTML, CSS, and JavaScript</dd>
 			<dt>Plans for Future Improvement</dt>
 			<dd>None</dd>
-			<dt>Working Demo</dt>
-			<dd><a href="https://cellardoor2147.itch.io/to-do" target="_blank">Itch.io link</a></dd>
-			<dt>Link to Code</dt>
+			<dt>Links</dt>
+			<dd><a href="https://cellardoor2147.itch.io/to-do" target="_blank">Itch.io demo</a></dd>
 			<dd><a href="https://github.com/cellardoor2147/cellardoor2147.github.io" target="_blank">Github repository</a></dd>
 		</dl>
 	</div>
