--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138877028-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-138877028-1');
+	</script>
 	<title>Joshua Reed 95</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -27,6 +36,11 @@
 		<div class="item" onclick="location.href='ProgrammingLanguages/ProgrammingLanguages.html'">
 			<img src="../images/folder.png">
 			<p>Programming Languages</p>
+		</div>
+
+		<div class="item" onclick="location.href='Networks/Networks.html'">
+			<img src="../images/folder.png">
+			<p>Networks</p>
 		</div>
 
 		<div class="item" onclick="location.href='DataScience/DataScience.html'">
