--- a/portfolio/DataScience/DataScience.html
+++ b/portfolio/DataScience/DataScience.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138877028-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-138877028-1');
+	</script>
 	<title>Joshua Reed 95</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -20,13 +29,13 @@
 
 	<div class="items">
 		<div class="item" onclick="location.href='IncomeAndEducation/IncomeAndEducation.html'">
-			<img src="../../images/folder.png">
-			<p>Income and Education</p>
+			<img src="../../images/blog.png">
+			<p>Income_and_Education.txt</p>
 		</div>
 
 		<div class="item" onclick="location.href='LongtermEffectsOfPoverty/LongtermEffectsOfPoverty.html'">
-			<img src="../../images/folder.png">
-			<p>Long-term Effects of Poverty</p>
+			<img src="../../images/blog.png">
+			<p>Long-term_Effects_of_Poverty.txt</p>
 		</div>
 	</div>
 
