--- a/portfolio/Games/FISAT/FISAT.html
+++ b/portfolio/Games/FISAT/FISAT.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-138877028-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-138877028-1');
+	</script>
 	<title>Joshua Reed 95</title>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
@@ -41,9 +50,8 @@
 					<li>Modularize the code</li>
 				</ul>
 			</dd>
-			<dt>Link to Demo</dt>
-			<dd><a href="https://cellardoor2147.itch.io/fisat" target="_blank">Itch.io link</a></dd>
-			<dt>Link to Article</dt>
+			<dt>Links</dt>
+			<dd><a href="https://cellardoor2147.itch.io/fisat" target="_blank">Itch.io demo</a></dd>
 			<dd><a href="https://github.com/cellardoor2147/FISAT" target="_blank">Github repository</a></dd>
 		</dl>
 	</div>
